# PhysicsTest

./: .gitignore  Key.jks  README.md  build_toolchain.bat
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: scene.vertexshader
app/src/main/c/: coffeecatch.c  generalUtils.c  generalUtils.h  log.h
app/src/main/cpp/: AssetManager.cpp  AssetManager.h  Engine.cpp  Engine.h  InputManager.cpp  InputManager.h  JNIHandler.cpp  Physics.cpp  Physics.h  Render.cpp  Render.h  coffeejni.cpp  exceptionUtils.cpp  exceptionUtils.h
app/src/main/java/com/example/physicstest/: JNIHandler.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
